css/common.css
@charset "UTF-8";

body {
    margin: 0;
    padding: 0;
    font-family: Verdana, Helvetica, sans-serif;
    color: #333;
}

a {
    color: #333;
}

a:hover {
    color: #DDAAAA;
}

p {
    margin: 0;
}

#top {
    max-width: 760px;
    margin: 0 auto;
}

header {
    background: #333;
    color: #F4F9FD;
    padding: 5px 20px;
}

#contents {
    padding: 10px 20px;
    background: #f1f1f1;
}

footer {
    padding: 0.75rem 1rem;
    background: #333;
    color: #F4F9FD;
    font-size: 0.75em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;}

header h1 {
    margin: 0;
    padding: 0;
    line-height: 60px;
}

header p {
    margin: 0;
    font-size: 0.75em;
}

#contents a {
    color: #DDAAAA;
}

#contents p {
    font-size: 0.93rem;
    margin: 0.25rem 0.3rem;
}

#contents a:hover {
    color: #DDAAAA;
    border: 0;
    border-bottom: 1px solid #DDAAAA;
}

#contents h2 {
    margin-bottom: 0.75rem;
    padding: 2px 2px 2px 0;
    color: #5D5353;
    font-weight: bold;
    line-height: 1.4;
    border-bottom: 3px double #5D5353;
}

#contents h3 {
    margin-bottom: 3px;
}

#contents h4 {
    margin-bottom: 2px;
    line-height: 1.4;
}

#contents h5 {
    margin-bottom: 2px;
    line-height: 1.4;
}

#contents h6 {
    margin-bottom: 2px;
    line-height: 1.4;
}

#contents ul, ol, dl {
    margin: 0.375rem 0 1rem 0;
    padding: 0;
}

#contents li {
    margin-left: 2em;
    padding: 0;
}

li:has(>p>strong) {
    margin-bottom: 0.5rem;
}

.copyright {
    padding: 10px;
    font-size: 0.63em;
}

